--- a/zip-0211.rst
+++ b/zip-0211.rst
@@ -53,52 +53,54 @@ Private payment channels as designed by the Bolt protocol require the following 
 7. Ability to inspect the transaction output such that:
 
 - Verify an output pays out to customer with a time lock
-
 - Verify an output pays out to merchant immediately
 
 **Channel Operation Assumptions.**
-* Single-funded channel by customer with a minimum fee paid to the merchant.
-* Customer initiates the closing transaction. Or, merchant can broadcast a message to the customer node that requests for the customer to initiate closing.
-* If the customer initiates closing, then Merchant can dispute the closing transaction if it disagrees with the refund token in the closing transaction.
+ - Single-funded channel by customer with a minimum fee paid to the merchant.
+ - Customer initiates the closing transaction. Or, merchant can broadcast a message to the customer node that requests for the customer to initiate closing.
+ - If the customer initiates closing, then Merchant can dispute the closing transaction if it disagrees with the refund token in the closing transaction.
 
 2. Custom Shielded Tx: Using T/Z-addresses and Scripting Opcodes
 -------------
+
 We assume the following specific features are present:
+
 (a) `OP_CLTV` - absolute lock time
 (b) nExpiryHeight - relative lock time
 (b) shielded address support
 (c) 2-of-2 multi-sig transparent address support (via P2SH)
 (d) Transaction non-malleability
 (e) `OP_BOLT` opcode: takes two inputs as argument (a mode and a serialized token) and outputs a `True` or `False` on the stack:
-- Mode 1 (`OPEN`). The opcode expects a channel token and validates that the channel opening is correct. That is, validates that the opening of the initial wallet commitment specified with the customer’s channel token. 
-- Mode 2 (`CLOSE`). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
-- Mode 3 (`DISPUTE`). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
+
+  - Mode 1 (`OPEN`). The opcode expects a channel token and validates that the channel opening is correct. That is, validates that the opening of the initial wallet commitment specified with the customer’s channel token. 
+  - Mode 2 (`CLOSE`). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
+  - Mode 3 (`DISPUTE`). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
 
 **Privacy Limitations**. The aggregate balance of the channel will be revealed in the 2-of-2 multisig transparent address. However, the identity of the participants will remain hidden.
 Channel opening and closing will be distinguishable on the network due to use of `OP_BOLT` opcodes.
 
-### 2.1 Channel Opening
-
+2.1 Channel Opening
+-------------
 Alice and Bob initialize the channel by producing an initial wallet commitment from generating the channel tokens via the Establish protocol.
 
 Alice (as customer) and Bob create a funding transaction that spends ZEC from shielded addresses to a 2-of-2 multi-sig transparent address using a `pay-to-script-hash (P2SH)` output with a `pay-to-public-key-hash (P2PKH)` embedded inside the script. Here is what the funding transaction looks like when opening the channel.
 
-### 2.2 Funding Transaction
-
+2.2 Funding Transaction
+-------------
 The funding transaction is by default funded by only one participant, the customer. It could also be funded by the merchant. This transaction has 2 shielded inputs and 1 output to a P2SH address and makes use of Bech32 addresses:
 
 TBD
 
-### 2.3 Initial Wallet Commitment
-
+2.3 Initial Wallet Commitment
+-------------
 TBD
 
-### 2.4 Channel Closing
-
+2.4 Channel Closing
+-------------
 TBD
 
-## 3. Custom Shielded Tx: Using Z-addresses and Scriptless
-
+3. Custom Shielded Tx: Using Z-addresses and Scriptless
+-------------
 We assume the following specific features are present:
 
 (a) lock_time - for absolute lock time
@@ -111,24 +113,26 @@ We assume the following specific features are present:
 
 The goal here is to perform all the same validation steps for channel opening/closing without relying on the scripting system, as well as allowing for relative timelocks (the equivalent of OP_CSV). In order to support multihop payments, we need absolute timelocks as well (the equivalent of OP_CLTV). We also want to ensure that transactions are non-malleable in order to allow for unconfirmed dependency transaction chains.
 
-## 4. Bitcoin Compatible: Using T-address and Scripting Opcodes
-
+4. Bitcoin Compatible: Using T-address and Scripting Opcodes
+-------------
 We assume the following features are present:
+
 (a) `OP_CLTV` - absolute lock time
 (b) `OP_CSV` - relative lock time
 (c) 2-of-2 multi-sig transparent address support
 (d) Transaction non-malleability
 (e) `OP_BOLT` opcode: takes two inputs as argument (a mode and a serialized token) and outputs a `True` or `False` on the stack:
-- Mode 1 (`OPEN`). The opcode expects a channel token and validates that the channel opening is correct. That is, validates that the opening of the initial wallet commitment specified with the customer’s channel token. 
-- Mode 2 (`CLOSE`). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
-- Mode 3 (`DISPUTE`). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
+
+  - Mode 1 (`OPEN`). The opcode expects a channel token and validates that the channel opening is correct. That is, validates  that the opening of the initial wallet commitment specified with the customer’s channel token. 
+  - Mode 2 (`CLOSE`). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
+  - Mode 3 (`DISPUTE`). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
 
 **Note**: that we wrote this specification assuming P2WSH because this enables transaction non-malleability and allows unconfirmed transaction dependency chains. Another approach to transaction non-malleability would be acceptable.
 
 **Privacy Limitations**. With T-addresses, we give up the ability to hide the initial balance for the funding transaction and final balances when closing the channel. Channel opening and closing will be distinguishable on the network due to use of `OP_BOLT` opcodes.
 
-### 4.1 Channel Opening
-
+4.1 Channel Opening
+-------------
 A channel is established when two parties successfully lock up funds in a multi-sig transparent address on the blockchain. The funds remain spendable by both parties and split according to the updated balance in a commitment transaction.
 
 Alice and Bob first initialize the channel by generating their respective keypairs and computing the channel tokens for the initial wallet commitment (see Transaction 4.2).
@@ -137,8 +141,8 @@ Alice (as customer) then creates a funding transaction that deposits ZEC to a 2-
 
 Once the funding transaction has been confirmed on the blockchain, Alice and Bob have effectively activated and established the channel.
 
-### 4.2 Funding Transaction
-
+4.2 Funding Transaction
+-------------
 The funding transaction is by default funded by only one participant, the customer. This transaction is a P2WSH segwit transaction. Here is a high-level of what the funding transaction would look like:
 
 	witness:      0 <channel-token> <cust-sig> <merch-sig> <2 <cust-pubkey> <merch-pubkey> 2 OP_CHECKMULTISIGVERIFY OP_DUP OP_HASH160 <hash-of-channel-token> OP_EQUALVERIFY OP_BOLT>
@@ -154,8 +158,8 @@ The channel token consists of the customer’s channel public key and wallet com
 
 The `<channel-token>` is a serialized token with the following structure: (a) Initial wallet commitment, initial wallet public key and the channel public key. Hash of the channel public key
 	
-### 4.3 Initial Wallet Commitment
-
+4.3 Initial Wallet Commitment
+-------------
 This wallet commitement below is created first during channel initialization, but the customer does not broadcast to the network.
 
 	locktime: should be set such that the commitment can be included in current block 
@@ -189,8 +193,8 @@ To spend this output, the merchant publishes a transaction with:
 	
 	witness: <merch-sig> <merch-pubkey> <witnessScript>
 
-### 4.4 Channel Closing
-
+4.4 Channel Closing
+-------------
 The customer initiates channel closing by posting a closing transaction that spends from the multi-signature address with a witness that satisfies the witnessScript and the `OP_BOLT` opcode: the refund token and the two transaction outputs to the customer (`txout[0]`) and merchant (`txout[1]`). Note that the refund token consists of (a) Mode ID: 2 and (2) a merchant signature on the latest wallet public key and the updated balance of the channel.  The customer’s transaction output is timelocked, while the merchant is able to spend immediately.
 
 
