--- a/zip-0211.rst
+++ b/zip-0211.rst
@@ -103,15 +103,14 @@ TBD
 -------------
 We assume the following specific features are present:
 
-(a) lock_time - for absolute lock time
-(b) nExpiryHeight - for relative lock time
+(a) ``lock_time`` - for absolute lock time
+(b) ``nExpiryHeight`` - for relative lock time
 (c) 2-of-2 multi-sig shielded address support
 (d) Inputs come from a shielded address and outputs to a shielded address
 (e) A method to encumber the outputs of a shielded transaction.
 (f) An extension to the transaction format to include BOLT
 
-
-The goal here is to perform all the same validation steps for channel opening/closing without relying on the scripting system, as well as allowing for relative timelocks (the equivalent of OP_CSV). In order to support multihop payments, we need absolute timelocks as well (the equivalent of OP_CLTV). We also want to ensure that transactions are non-malleable in order to allow for unconfirmed dependency transaction chains.
+The goal here is to perform all the same validation steps for channel opening/closing without relying on the scripting system, as well as allowing for relative timelocks (the equivalent of ``OP_CSV``). In order to support multihop payments, we need absolute timelocks as well (the equivalent of ``OP_CLTV``). We also want to ensure that transactions are non-malleable in order to allow for unconfirmed dependency transaction chains.
 
 4. Bitcoin Compatible: Using T-address and Scripting Opcodes
 -------------
@@ -145,11 +144,9 @@ Once the funding transaction has been confirmed on the blockchain, Alice and Bob
 -------------
 The funding transaction is by default funded by only one participant, the customer. This transaction is a P2WSH segwit transaction. Here is a high-level of what the funding transaction would look like:
 
-"""
 	witness: 0 <channel-token> <cust-sig> <merch-sig> <2 <cust-pubkey> <merch-pubkey> 2 OP_CHECKMULTISIGVERIFY OP_DUP OP_HASH160 <hash-of-channel-token> OP_EQUALVERIFY OP_BOLT>
 	scriptSig: (empty)
 	scriptPubKey: 0 <32-byte-hash>
-"""
 
 This is a standard Segwit P2WSH transaction. Note that the witness and empty `scriptSig` are provided by a subsequent transaction that spends the funding transaction output. The `scriptPubKey` of the funding transaction indicates that a witness script should be provided with a given hash; the `witnessScript` (≤ 10,000 bytes) is popped off the initial witness stack of a spending transaction and the SHA256 of witnessScript must match the 32-byte hash of the following:
 
@@ -158,34 +155,33 @@ This is a standard Segwit P2WSH transaction. Note that the witness and empty `sc
 
 The channel token consists of the customer’s channel public key and wallet commitment from initializing the channel. The unique channel identifier is the hash of the channel public key.
 
-The `<channel-token>` is a serialized token with the following structure: (a) Initial wallet commitment, initial wallet public key and the channel public key. Hash of the channel public key
+The ``<channel-token>`` is a serialized token with the following structure: (a) Initial wallet commitment, initial wallet public key and the channel public key.
 	
 4.3 Initial Wallet Commitment
 -------------
 This wallet commitement below is created first during channel initialization, but the customer does not broadcast to the network.
 
-	locktime: should be set such that the commitment can be included in current block 
-	- txin count: 1
-	  - txin[0] outpoint: txid and outpoint _index of the funding transaction
-	  - txin[0] script bytes: 0
-	  - txin[0] witness: 0 <channel-token> <cust-sig> <merch-sig> <2 <cust_fund_pubkey> <merch_fund_pubkey> 2 OP_CHECKMULTISIGVERIFY OP_DUP OP_HASH160 <hash-of-channel-token> OP_EQUALVERIFY OP_BOLT>
-	  - txouts: 
-		- to_customer: a timelocked (using OP_CSV) version-0 P2WSH output sending funds back to the customer. So scriptPubKey is of the form 0 <32-byte-hash>. A customer node may create a transaction spending this output with:
-			- nSequence: <time-delay>
-			- Witness: <refund-token> <cust-sig> 0 <witnessScript>
-			- Witness script:
-				OP_IF
-		    		# Merchant can spend if revoked CT available
-		    		OP_2 <revocation-pubkey> <merch-pubkey> OP_2   
-				OP_ELSE
-		    		# Customer must wait 
-		    		<time-delay> OP_CSV OP_DROP <customer-pubkey>
-				OP_ENDIF
-				OP_CHECKSIGVERIFY OP_BOLT
+locktime: should be set such that the commitment can be included in current block 
+- txin count: 1
+  - txin[0] outpoint: txid and outpoint _index of the funding transaction
+  - txin[0] script bytes: 0
+  - txin[0] witness: 0 <channel-token> <cust-sig> <merch-sig> <2 <cust_fund_pubkey> <merch_fund_pubkey> 2 OP_CHECKMULTISIGVERIFY OP_DUP OP_HASH160 <hash-of-channel-token> OP_EQUALVERIFY OP_BOLT>
+  - txouts: 
+    - to_customer: a timelocked (using OP_CSV) version-0 P2WSH output sending funds back to the customer. So scriptPubKey is of the form 0 <32-byte-hash>. A customer node may create a transaction spending this output with:
+	- nSequence: <time-delay>
+	- Witness: <refund-token> <cust-sig> 0 <witnessScript>
+	- Witness script:
+		OP_IF
+		# Merchant can spend if revoked CT available
+		OP_2 <revocation-pubkey> <merch-pubkey> OP_2   
+		OP_ELSE
+		# Customer must wait 
+		<time-delay> OP_CSV OP_DROP <customer-pubkey>
+		OP_ENDIF
+		OP_CHECKSIGVERIFY OP_BOLT
 				
-		- to_merchant: A P2WPKH to merch-pubkey output (sending funds back to the merchant), i.e.
-		- scriptPubKey: 0 <20-byte-key-hash of merch-pubkey>
-
+	- to_merchant: A P2WPKH to merch-pubkey output (sending funds back to the merchant), i.e.
+	- scriptPubKey: 0 <20-byte-key-hash of merch-pubkey>
 
 Or, if a revoked commitment transaction is available, the merchant may spend the output with the above witness script and witness stack:
 
