--- a/zip-0211.rst
+++ b/zip-0211.rst
@@ -2,9 +2,10 @@
 
   ZIP: 211
   Title: Add support for Bolt protocol 
-  Author: J. Ayo Akinyele <ayo@boltlabs.io>
-          Colleen Swanson <swan@boltlabs.io>
-  Credits: Ian Miers and Matthew Green
+  Authors: J. Ayo Akinyele <ayo@boltlabs.io>
+           Colleen Swanson <swan@boltlabs.io>
+  Credits: Ian Miers <imichaelmiers@gmail.com>
+           Matthew Green <mgreen@z.cash>
   Category: Consensus
   Created: 2019-03-25
   License: MIT
@@ -116,15 +117,15 @@ The goal here is to perform all the same validation steps for channel opening/cl
 -------------
 We assume the following features are present:
 
-(a) `OP_CLTV` - absolute lock time
-(b) `OP_CSV` - relative lock time
+(a) ``OP_CLTV`` - absolute lock time
+(b) ``OP_CSV`` - relative lock time
 (c) 2-of-2 multi-sig transparent address support
 (d) Transaction non-malleability
-(e) `OP_BOLT` opcode: takes two inputs as argument (a mode and a serialized token) and outputs a `True` or `False` on the stack:
+(e) ``OP_BOLT`` opcode: takes two inputs as argument (a mode and a serialized token) and outputs a `True` or `False` on the stack:
 
-  - Mode 1 (`OPEN`). The opcode expects a channel token and validates that the channel opening is correct. That is, validates  that the opening of the initial wallet commitment specified with the customer’s channel token. 
-  - Mode 2 (`CLOSE`). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
-  - Mode 3 (`DISPUTE`). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
+- Mode 1 (``OPEN``). The opcode expects a channel token and validates that the channel opening is correct. That is, validates  that the opening of the initial wallet commitment specified with the customer’s channel token. 
+- Mode 2 (``CLOSE``). The opcode expects a channel closure token (with refund token and hash of wallet pub key for latest state embedded) as part of closing transaction. It validates the signature on the closure token first. Then, validates the refund token and verifies two additional constraints: (1) there are two outputs in the closing transaction: one paying the merchant his balance and the other paying the customer, (2) the customer’s payout is timelocked (to allow for merchant dispute).
+- Mode 3 (``DISPUTE``). The opcode expects a revocation token. It validates the revocation token with respect to the wallet pub key posted by customer in closing transaction. If valid, then it means that the refund token will be invalidated.
 
 **Note**: that we wrote this specification assuming P2WSH because this enables transaction non-malleability and allows unconfirmed transaction dependency chains. Another approach to transaction non-malleability would be acceptable.
 
@@ -134,7 +135,7 @@ We assume the following features are present:
 -------------
 A channel is established when two parties successfully lock up funds in a multi-sig transparent address on the blockchain. The funds remain spendable by both parties and split according to the updated balance in a commitment transaction.
 
-Alice and Bob first initialize the channel by generating their respective keypairs and computing the channel tokens for the initial wallet commitment (see Transaction 4.2).
+Alice and Bob first initialize the channel by generating their respective keypairs and computing the channel tokens for the initial wallet commitment.
 
 Alice (as customer) then creates a funding transaction that deposits ZEC to a 2-of-2 multi-signature transparent address using a pay-to-witness-script-hash (P2WSH) output (alternatively, a P2WPKH nested in a P2SH could work). Alice obtains a signature for the funding transaction from Bob.
 
@@ -148,7 +149,7 @@ The funding transaction is by default funded by only one participant, the custom
 	scriptSig: (empty)
 	scriptPubKey: 0 <32-byte-hash>
 
-This is a standard Segwit P2WSH transaction. Note that the witness and empty `scriptSig` are provided by a subsequent transaction that spends the funding transaction output. The `scriptPubKey` of the funding transaction indicates that a witness script should be provided with a given hash; the `witnessScript` (≤ 10,000 bytes) is popped off the initial witness stack of a spending transaction and the SHA256 of witnessScript must match the 32-byte hash of the following:
+This is a standard Segwit P2WSH transaction. Note that the witness and empty ``scriptSig`` are provided by a subsequent transaction that spends the funding transaction output. The ``scriptPubKey`` of the funding transaction indicates that a witness script should be provided with a given hash; the ``witnessScript`` (≤ 10,000 bytes) is popped off the initial witness stack of a spending transaction and the SHA256 of witnessScript must match the 32-byte hash of the following:
 
 	2 <cust-pubkey> <merch-pubkey> 2 OP_CHECKMULTISIGVERIFY 
 	OP_DUP OP_HASH160 <hash-of-channel-token> OP_EQUALVERIFY OP_BOLT
