--- a/zip-0211.rst
+++ b/zip-0211.rst
@@ -4,7 +4,7 @@
   Title: Add support for Bolt protocol 
   Authors: J. Ayo Akinyele <ayo@boltlabs.io>
            Colleen Swanson <swan@boltlabs.io>
-  Credits: Ian Miers <imichaelmiers@gmail.com>
+  Credits: Ian Miers <imiers@z.cash?>
            Matthew Green <mgreen@z.cash>
   Category: Consensus
   Created: 2019-03-25
